--- a/src/index.css
+++ b/src/index.css
@@ -24,28 +24,167 @@
   width: 100%;
   height: 100vh;
   color: var(--text);
+  overflow-y: hidden;
 }
 
 .Navbar {
-  position: fixed;
-  right: 0;
+
+  display: flex;
   padding: 20px;
+  justify-content: space-between;
+  width: 100%;
 
 }
 
-.navbar_list {
+.Navbar h1 {
+  text-align: center;
+  color: var(--Red);
+  font-size: 22px;
+
+}
+
+.menu {
+  color: var(--text);
+  font-size: 28px;
+
+  position: fixed;
+  right: 15px;
+
+
+}
+
+.navbar_list{
   list-style: none;
-  width: 100%;
+  font-size: 15px;
+  position: absolute;
+  
+
+}
+.container{
+  position: relative;
+  right: 100px;
+  top: 20px;
+  
+  
+}
+
+.container li:hover{
+  cursor: pointer;
+}
+
+
+.display_none {
+  display: none;
+}
+
+
+
+
+
+
+
+/* ------------------------------About----------------------- */
+.principal {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  gap: 100px;
-  padding: 20px;
-  font-weight: 500;
+  justify-content: center;
+  position: relative;
+}
+
+.principal .photos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.fondo {
+  width: 90%;
+ 
+}
+.principal  div .photo{
+  width: 70%;
+  position: absolute;
+}
+
+.info{
+  padding: 50px;
+  font-size: 15px;
+  color:var(--SecondBoox);
+}
+
+.info h3{
+  font-size: 15px;
+}
+.tecnologys{
+  color: whitesmoke;
+  font-size: 40px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+/* -----------------------------Proyects-------------------------- */
+.proyects{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.proyects img{
+  width: 90%;
 
 }
 
-.navbar_list li {
-  writing-mode: sideways-rl;
+
+
+/* -------------------------------Footer-------------------------- */
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  
 }
+
+.footer h2{
+  font-size: 15px;
+}
+.social{
+  display: flex;
+  gap: 10px;
+}
+.footer a {
+  color: var(--text);
+  font-size: 20px;
+
+}
+
+
+
+/* ---------------------Media Querys------------------------------ */
+
+@media screen and (min-width:576px) {}
+
+@media screen and (min-width:768px) {}
+
+@media screen and (min-width:992px) {
+  .navbar_list {
+    list-style: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 100px;
+    padding: 20px;
+    font-weight: 500;
+
+  }
+  .navbar_list li {
+    writing-mode: sideways-rl;
+  }
+}
+
+@media screen and (min-width:1200px) {}
