--- a/src/index.css
+++ b/src/index.css
@@ -313,6 +313,7 @@
   flex-direction:column ;
   width: 30%;
   height: 100px;
+  align-items: center;
 
   flex-wrap: wrap;
 
@@ -407,7 +408,38 @@
   background: var(--text2);
   width: 100%;
   color: var(--ContainerBackground);
+  
+  text-align: center;
+  padding: 10px;
+}
+.footer_menu_container{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+
+}
+.footer ul{
+  list-style: none;
+}
+.footer_menu{
+  display: flex;
+  gap: 30px;
+}
+.footer_menu_link ul{
+  display: flex;
+  font-size: 30px;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
   padding-bottom: 80px;
+   
+
+}
+
+.footer i{
+  color: var(--ContainerBackground);
+
 }
 /* ---------------------Media Querys------------------------------ */
 
