--- a/src/index.css
+++ b/src/index.css
@@ -357,10 +357,6 @@
 }
 
 /* -------------------------Proyects----------------- */
-.proyects_filter {
-  display: flex;
-  width: 100%;
-}
 
 .title {
   padding-bottom: 20px;
@@ -378,6 +374,37 @@
   
 
 }
+.proyects_filter {
+  display: flex;
+  width: 100%;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+.btn-filter{
+  padding: 10px;
+  width: 120px;
+  border: none;
+  border-radius: 15px;
+  color: var(--text);
+  background: #181823;
+  font-size: 15px;
+  
+
+}
+.btn-filter span{
+  text-transform: uppercase;
+
+}
+.btn-filter:hover{
+  background: #03DAC5;
+  cursor: pointer;
+  color: var(--DefaultFont);
+  font-weight: bold;
+  box-shadow: 1px 1px 10px var(--text);
+}
+
+
 .proyects_container_main{
   display: flex;
   gap: 20px;
